--- a/src/api/swagger/ein-server.yml
+++ b/src/api/swagger/ein-server.yml
@@ -119,7 +119,115 @@ paths:
                 website:
                   type: string
                   example: 'http://equalda.com'
-
+    get:
+      summary: 인증 회원 리스트
+      tags: [user]
+      responses:
+        '401':
+          description: 인증 에러(admin만 접근 가능)
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  contents:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                          example: 1
+                        name:
+                          type: string
+                          example: 강상훈
+                        nickname:
+                          type: string
+                          example: 깡상
+                        email:
+                          type: string
+                          example: email@example.com 
+                        address:
+                          type: string
+                          example: 제주특별자치도 제주시 아라동 999길
+                        detail_address:
+                          type: string
+                          example: 아파트 501호
+                        email_check:
+                          type: boolean
+                          example: false
+                        push_agree:
+                          type: boolean
+                          example: true
+                        phone:
+                          type: string
+                          example: '01012345678'
+                        company:
+                          type: string
+                          example: ~~ 주식회사
+                        company_number:
+                          type: string
+                          example: '109394295'
+                          description: 사업자등록번호
+                        website:
+                          type: string
+                          example: 'http://equalda.com'
+                        auth:
+                          type: boolean
+                          example: false
+                          description: 인증여부 
+                  pageInfo:
+                    type: object
+                    properties:
+                      pageNumber:
+                        type: integer
+                        example: 1
+                      totalPages:
+                        type: integer
+                        example: 1
+                      pageSize:
+                        type: integer
+                        example: 10
+    parameters:
+      - name: email_check
+        in: query
+        required: true
+        schema:
+          type: string
+          example: yes
+          enum:
+            - yes
+            - no
+        description: 이메일 인증여부
+      - name: push_agree
+        in: query
+        required: true
+        schema:
+          type: string
+          example: yes
+          enum:
+            - yes
+            - no
+        description: 알람 동의 여부
+      - name: page
+        description: 'default: 1'
+        in: query
+        schema:
+          type: integer
+        example: 1
+      - name: pageSize
+        description: 'default: 10'
+        in: query
+        schema:
+          type: integer
+        example: 10
+      - name: location_id
+        in: query
+        schema:
+          type: integer
+        example: 17
 
   /user:
     post:
