--- a/src/api/swagger/ein-server.yml
+++ b/src/api/swagger/ein-server.yml
@@ -474,6 +474,9 @@ paths:
                   end_date:
                     type: string
                     example: 2020-08-31T07:12:28Z
+                  imageurl:
+                    type: string
+                    example: https://storage.googleapis.com/ein-server.appspot.com/images/1598227815783%EA%B2%80%EC%9D%80%EC%83%89%20%EB%B0%B0%EA%B2%BD.png
                   auth:
                     type: string
                     example: no
@@ -516,6 +519,9 @@ paths:
                 location_id:
                   type: integer
                   example: 17
+                imageurl:
+                  type: string
+                  example: https://storage.googleapis.com/ein-server.appspot.com/images/1598227815783%EA%B2%80%EC%9D%80%EC%83%89%20%EB%B0%B0%EA%B2%BD.png
                 major_id:
                   type: integer
                   example: 1
