회원정보 수정시 pw 검증 추가

--- a/src/api/swagger/ein-server.yml
+++ b/src/api/swagger/ein-server.yml
@@ -405,6 +405,9 @@ paths:
                 password:
                   type: string
                   example: 비밀번호
+                newPassword:
+                  type: string
+                  example: 새비밀번호
                 nickname:
                   type: string
                   example: 닉네임
