api 문서에 pushAgree  yes, no 로 수정

--- a/src/api/swagger/ein-server.yml
+++ b/src/api/swagger/ein-server.yml
@@ -162,8 +162,11 @@ paths:
                           type: boolean
                           example: false
                         push_agree:
-                          type: boolean
-                          example: true
+                          type: string
+                          example: yes
+                          enum:
+                            - yes
+                            - no
                         phone:
                           type: string
                           example: '01012345678'
@@ -424,8 +427,11 @@ paths:
                   type: string
                   example: 101호
                 pushAgree:
-                  type: boolean
-                  example: true
+                  type: string
+                  example: yes
+                  enum:
+                    - yes
+                    - no
     parameters:
       - name: email
         in: path
